<resources>
    <string name="accounts">Accounts</string>
    <string name="total">Total: %1$s %2$s</string>
    <string name="month_income">INCOME THIS MONTH</string>
    <string name="month_expenses">EXPENSES THIS MONTH</string>
    <string name="excluded">(excluded)</string>
    <string name="income_uppercase">INCOME</string>
    <string name="expenses_uppercase">EXPENSES</string>
    <string name="app_locked">APP LOCKED</string>
    <string name="authenticate_text">Authenticate to enter the app</string>
    <string name="unlock">Unlock</string>
    <string name="current_balance">CURRENT BALANCE</string>
    <string name="balance_after_payments">BALANCE AFTER PLANNED PAYMENTS</string>
    <string name="connect">Connect</string>
    <string name="sync_transactions">Sync transactions</string>
    <string name="syncing_transactions">Syncing transactions…</string>
    <string name="bank_sync_enabled">Bank sync enabled:</string>
    <string name="remove_customer">Remove customer</string>
    <string name="add_budget">Add budget</string>
    <string name="no_budgets">No budgets</string>
    <string name="no_budgets_text">You don\'t have any budgets set.\nTap the "+ Add budget" to add one.</string>
    <string name="budgets">Budgets</string>
    <string name="for_categories">%1$s %2$s for categories</string>
    <string name="app_budget">%1$s %2$s app budget</string>
    <string name="budget_info_both">Budget info: %1$s / %2$s</string>
    <string name="budget_info">Budget info: %1$s%2$s</string>
    <string name="add_category">Add category</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_count">Expenses count</string>
    <string name="income">Income</string>
    <string name="income_count">Income count</string>
    <string name="balance_chart">Balance chart</string>
    <string name="balance">BALANCE %1$s</string>
    <string name="charts">Charts</string>
    <string name="period">Period:</string>
    <string name="categories">Categories</string>
    <string name="export_csv_file">Export CSV file</string>
    <string name="export_csv_file_standard">Export CSV file with standard options</string>
    <string name="export_csv_file_standard_description">Please use the standard options and make sure to include headers.</string>
    <string name="how_to_import">How to import</string>
    <string name="open">open</string>
    <string name="steps">Steps</string>
    <string name="how_to">How to</string>
    <string name="video">Video</string>
    <string name="article">Article</string>
    <string name="upload_csv_file">Upload CSV file</string>
    <string name="export_data">Export Data</string>
    <string name="upload_csv_zip_file">Upload CSV/ZIP file</string>
    <string name="export_to_file">Export to file</string>
    <string name="export_to_file_description">Character set: UTF-8\nDecimal separator: Decimal point \'.\'\nDelimiter character: Comma \',\'</string>
    <string name="export_excel_file">Export Excel file</string>
    <string name="convert_xls_to_csv">Convert XLS to CSV</string>
    <string name="convert_xls_to_csv_description">!NOTE: If the exported file doesn\'t have ".xls" extension, add it by renaming the file manually.</string>
    <string name="online_csv_converter_free">Online CSV converter FREE</string>
    <string name="check_email_spam">Check your email\'s "Promotions" and "Spam" folders</string>
    <string name="download_email_file">Download the \"transactions_export…\" file attached to the email.</string>
    <string name="download_email_file_description">If you have more than one currency you\'ll have to download each \"transactions_export…\" file and import it in Ivy.</string>
    <string name="import_from">Import from</string>
    <string name="please_wait">Please wait</string>
    <string name="importing_the_csv_file">Importing the CSV file</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="imported">Imported</string>
    <string name="transactions_imported">%1$d transactions</string>
    <string name="accounts_imported">%1$d accounts</string>
    <string name="categories_imported">%1$d categories</string>
    <string name="failed">Failed</string>
    <string name="rows_from_csv_not_recognized">%1$d rows from CSV file not recognized</string>
    <string name="finish">Finish</string>
    <string name="add_description">Add description</string>
    <string name="description">Description</string>
    <string name="planned_for">Planned for</string>
    <string name="add_money_to">Add money to</string>
    <string name="pay_with">Pay with</string>
    <string name="from">From</string>
    <string name="account">Account</string>
    <string name="to">To</string>
    <string name="add_account">Add account</string>
    <string name="income_title">Income title</string>
    <string name="expense_title">Expense title</string>
    <string name="transfer_title">Transfer title</string>
    <string name="expense">Expense</string>
    <string name="add_planned_date_payment">Add planned date of payment</string>
    <string name="pay">Pay</string>
    <string name="get">Get</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="transaction_confirm_deletion_description">Deleting this transaction will remove it from the transaction history and update the balance accordingly.</string>
    <string name="confirm_account_change">Confirm Account Change</string>
    <string name="confirm_account_change_description">Note: You are trying to change the account associated with the loan with an account of different currency, \nAll the loan records will be re-calculated based on today\'s exchanges rates </string>
    <string name="confirm">Confirm</string>
    <string name="account_change_recalculating">Please wait, re-calculating all loan records</string>
    <string name="created_on">Created on</string>
    <string name="hi">Hi</string>
    <string name="hi_name">Hi %1$s</string>
    <string name="cashflow">Cashflow: %1$s%2$s %3$s</string>
    <string name="search_transactions">Search transactions</string>
    <string name="ivy_wallet_open_source">Ivy Wallet is open-source</string>
    <string name="savings_goal">Savings goal</string>
    <string name="quick_access">Quick access</string>
    <string name="settings">Settings</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="auto_mode">Auto mode</string>
    <string name="planned_payments">Planned\nPayments</string>
    <string name="share_ivy">Share Ivy</string>
    <string name="reports">Reports</string>
    <string name="loans">Loans</string>
    <string name="set_currency">Set currency</string>
    <string name="no_transactions">No transactions</string>
    <string name="no_transactions_description">You don\'t have any transactions for %1$s.\nYou can add one by tapping the \"+\" button.</string>
    <string name="add_loan">Add loan</string>
    <string name="no_loans">No loans</string>
    <string name="no_loans_description">You don\'t have any loans.\nTap the \"+ Add loan\" to add one.</string>
    <string name="loan_confirm_deletion_description">Note: Deleting this loan will remove it permanently and delete all associated loan records with it.</string>
    <string name="confirm_account_loan_change">Please wait, re-calculating all loan records</string>
    <string name="paid">Paid</string>
    <string name="left_to_pay">%1$s %2$s left</string>
    <string name="loan_interest">Loan Interest</string>
    <string name="interest_paid">%1$s %2$s paid</string>
    <string name="add_record">Add record</string>
    <string name="interest">Interest</string>
    <string name="no_records">No records</string>
    <string name="no_records_for_the_loan">You don\'t have any records for this loan. Tap "Add record" to create one.</string>
    <string name="add_income">Add income</string>
    <string name="add_expense">Add expense</string>
    <string name="unspecified">Unspecified</string>
    <string name="percent">%1$s\%%</string>
    <string name="account_transfers">Account Transfers</string>
    <string name="no_transactions_for_period">You don\'t have any transactions for %1$s.\nYou can add one by scrolling down and tapping "Add income" or "Add expense" button at the top.</string>
    <string name="account_confirm_deletion_description">Note: Deleting this account will remove it permanently and delete all associated transactions with it.</string>
    <string name="category_confirm_deletion_description">Note: Deleting this category will remove it permanently.</string>
    <string name="edit">Edit</string>
    <string name="transactions">transactions</string>
    <string name="home">Home</string>
    <string name="add_planned_payment">Add planned payment</string>
    <string name="add_income_uppercase">ADD INCOME</string>
    <string name="add_expense_uppercase">ADD EXPENSE</string>
    <string name="account_transfer">ACCOUNT TRANSFER</string>
    <string name="skip">Skip</string>
    <string name="add_new">Add new</string>
    <string name="from_date">From %1$s</string>
    <string name="to_date">To %1$s</string>
    <string name="range">Range</string>
    <string name="privacy_and_data_collection">Privacy and\ndata collection</string>
    <string name="swipe_to_agree_terms_conditions">Swipe to agree with our Terms and conditions</string>
    <string name="agreed_terms_conditions">Agreed with our Terms and conditions</string>
    <string name="swipe_to_agree_privacy_policy">Swipe to agree with our Privacy policy</string>
    <string name="agreed_privacy_policy">Agreed with our Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="wallet_description">Track your income, expenses and budget with Ivy.\n\nIntuitive UI, recurring and planned payments, manage multiple accounts, organize transactions in categories, meaningful statistics, export to CSV and so much more.</string>
    <string name="enter_your_name">Enter your name\nto personalize your\nwallet</string>
    <string name="what_is_your_name">What\'s your name?</string>
    <string name="enter">Enter</string>
    <string name="add_accounts">Add accounts</string>
    <string name="suggestion">Suggestions</string>
    <string name="next">Next</string>
    <string name="add_categories">Add categories</string>
    <string name="suggestions">Suggestions</string>
    <string name="set">Set</string>
    <string name="your_personal_money_manager">Your personal money manager</string>
    <string name="opensource">#opensource</string>
    <string name="google_error_try_again">Error. Try again: %1$s</string>
    <string name="google_signing_in">Signing in…</string>
    <string name="google_signing_in_success">Success!</string>
    <string name="login_with_google">Login with Google</string>
    <string name="offline_account">Offline account</string>
    <string name="sync_data_ivy_cloud">SYNC YOUR DATA ON THE IVY CLOUD</string>
    <string name="data_integrity_protection_warning">Data integrity and protection aren\'t guaranteed!</string>
    <string name="or_enter_with_offline_account">OR ENTER WITH OFFLINE ACCOUNT</string>
    <string name="offline_warning">Your data will be saved locally (only on your phone) and won\'t be synced with the cloud. You risk losing it if you uninstall the app or change your device. You can always activate sync later if you decide to.</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="by_signing_in">By signing in, you agree with our %1$s and %2$s.</string>
    <string name="import_csv_file">Import CSV file</string>
    <string name="from_ivy_or_another_app">from Ivy or another app</string>
    <string name="transfer">Transfer</string>
</resources>