<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlWidgetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="horizontal"
    tools:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_widget_background"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="14dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivIncome"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_widget_income" />

            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivExpense"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_widget_expense" />

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/expense"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivTransfer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_widget_transfer" />

            <TextView
                android:id="@+id/tvTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/transfer"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>